<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:id="@+id/login"
    android:baselineAligned="false"
    android:clickable="true">

    <ImageView
        android:layout_width="123dp"
        android:layout_height="123dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/quiz_logo"
        android:contentDescription="quizlogo" />

    <AutoCompleteTextView android:id="@+id/txt_email" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/login_campo_email"
        android:inputType="textEmailAddress" android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <EditText android:id="@+id/txt_senha" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/login_campo_senha"
        android:imeActionLabel="@string/login_campo_senha_msg"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/btn_logar" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/login_botao_logar"
            android:textStyle="bold"
            android:layout_weight="1" />

        <Button
            style="?android:textAppearanceSmall"
            android:id="@+id/btn_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_botao_cadastrar"
            android:textStyle="bold"
            android:layout_weight="2" />

    </LinearLayout>

</LinearLayout>

