<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/cadastro_usuario"
    tools:context="com.alpha.quiztomizador.controles.UsuarioActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <EditText
            android:id="@+id/txt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario_campo_nome"
            android:imeActionLabel="Nome do Usuário"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="33dp" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario_campo_email"
            android:imeActionLabel="Email"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_below="@+id/txt_nome"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/txt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario_campo_senha"
            android:imeActionLabel="Digite uma Senha"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_below="@+id/txt_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="textPassword"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/txt_confirmar_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario_campo_confirmar"
            android:imeActionLabel="Confirmar Senha"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_below="@+id/txt_senha"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="textPassword"
            android:layout_marginTop="10dp" />

        <Button android:id="@+id/btn_enviar" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/usuario_botao_enviar"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
