<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alpha.quiztomizador.controles.PrincipalActivity">

    <LinearLayout android:orientation="vertical" android:padding="12.0dip" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_gravity="center"
        android:layout_centerInParent="true">

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="64dp"-->
            <!--android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"-->
            <!--android:text="@string/nome_aplicacao"-->
            <!--android:id="@+id/textView"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:textStyle="bold" />-->

        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_weight="0">
            <Button
                android:textColor="@android:color/white"
                android:id="@+id/btn_cadastros"
                android:background="@drawable/botoes"
                android:padding="6.0dip"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/principal_botao_cadastros"
                android:focusableInTouchMode="false"
                android:onClick="onClickCadastros"
                android:layout_margin="3.0dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_novo" />

            <Button
                android:textColor="@android:color/white"
                android:id="@+id/btn_compartilhar"
                android:background="@drawable/botoes"
                android:padding="6.0dip"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="3.0dip"
                android:text="@string/principal_botao_compartilhar"
                android:drawableTop="@drawable/reset"
                android:onClick="onClickCompartilhar"
                android:focusableInTouchMode="false"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_weight="0">

            <Button
                android:textColor="@android:color/white"
                android:id="@+id/btn_quiz"
                android:background="@drawable/botoes"
                android:padding="6.0dip"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/principal_botao_quiz"
                android:drawableTop="@drawable/quiz"
                android:onClick="onClickQuiz"
                android:focusableInTouchMode="false"
                android:layout_margin="3.0dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <Button
                android:textColor="@android:color/white"
                android:id="@+id/btn_resultados"
                android:background="@drawable/botoes"
                android:padding="6.0dip"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="3.0dip"
                android:text="@string/principal_botao_resultados"
                android:drawableTop="@drawable/results"
                android:onClick="onClickResultados"
                android:focusableInTouchMode="false"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:enabled="true" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_weight="0">

            <Button
                android:textColor="@android:color/white"
                android:id="@+id/btn_opcoes"
                android:background="@drawable/botoes"
                android:padding="6.0dip"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="3.0dip"
                android:text="@string/principal_botao_opcoes"
                android:drawableTop="@drawable/profile"
                android:onClick="onClickOpcoes"
                android:focusableInTouchMode="false"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <Button
                android:textColor="@android:color/white"
                android:id="@+id/btn_sair"
                android:background="@drawable/botoes"
                android:padding="6.0dip"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="3.0dip"
                android:text="@string/principal_botao_sair"
                android:drawableTop="@drawable/exit"
                android:onClick="onClickSair"
                android:focusableInTouchMode="false"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />
        </TableRow>

    </LinearLayout>

</RelativeLayout>
