
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alpha.quiztomizador.controles.ResultadosActivity">

    <LinearLayout android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:id="@+id/view_grafico"
        android:clickable="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="false"
            android:measureAllChildren="false">

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="vertical"
                android:layout_alignTop="@+id/lst_resultados"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <com.alpha.quiztomizador.grafico.GraficoPizza
                    android:id="@+id/grafico_pizza" android:layout_width="match_parent" android:layout_height="200.0dip"
                    android:layout_weight="0.14" />

                <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@+id/txt_questionario" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Questionario"
                    android:textStyle="bold" />

                <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="0dp"
                    android:layout_weight="0.27">
                    <LinearLayout
                        android:layout_width="match_parent" android:layout_height="wrap_content">
                        <View android:background="#ff00ff00" android:layout_width="30.0dip" android:layout_height="30.0dip"
                            android:clickable="true" />

                        <TextView
                            android:textAppearance="?android:textAppearanceMedium"
                            android:gravity="center"
                            android:id="@+id/txt_corretas"
                            android:padding="3.0dip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/resultados_corretas"
                            android:layout_gravity="center_vertical" />

                        <View android:background="#ffff0000" android:layout_width="30.0dip" android:layout_height="30.0dip" />

                        <TextView
                            android:textAppearance="?android:textAppearanceMedium"
                            android:gravity="center"
                            android:id="@+id/txt_erradas"
                            android:padding="3.0dip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/resultados_erradas"
                            android:singleLine="true" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:layout_weight="0.39"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:gravity="center"
                        android:id="@+id/txt_inicio"
                        android:padding="3.0dip"
                        android:layout_width="135dp"
                        android:layout_height="wrap_content"
                        android:text="@string/resultados_inicio" />

                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:gravity="center"
                        android:id="@+id/txt_termino"
                        android:padding="3.0dip"
                        android:layout_width="135dp"
                        android:layout_height="wrap_content"
                        android:text="@string/resultados_termino" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_voltar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/resultados_botao_voltar"
                    android:onClick="mudarVisibilidade" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_resultados"
        android:focusableInTouchMode="false">

        <ListView
            android:id="@+id/listagem"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:textFilterEnabled="true"
            android:layout_weight="1"
            android:choiceMode="singleChoice" />
        <TextView android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="LISTA VAZIA!"
            android:textColor="#525252"
            android:textSize="30.0sp"
            android:gravity="center_horizontal|fill_vertical" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultados_botao_limpar"
            android:id="@+id/btn_limpar"
            android:layout_alignParentTop="true"
            android:onClick="onClickLimparResultados" />
    </LinearLayout>

</RelativeLayout>